--- a/project/package.json
+++ b/project/package.json
@@ -53,6 +53,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
+    "@types/react-tabs": "^2.3.3",
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^4.1.0",
     "faker": "^5.5.3",
