--- a/project/package.json
+++ b/project/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.7",
+    "formik": "^2.2.9",
     "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
