--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
+    "react-toastify": "^8.1.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
